--- a/emails/verify-email/html.pug
+++ b/emails/verify-email/html.pug
@@ -1,2 +1,6 @@
-p Hi #{name},
-p Welcome to Mars, the red planet.
+h1 Verify your email address
+p Thanks for signing up for Template! We're excited to have you as an early user.
+a(href=link) Verify Email
+p Thanks, <br>The Template Team
+p If you're having trouble clicking the button, copy and paste the URL below into your web browser.
+a(href=link) #{link} 
