--- a/emails/verify-email/html.pug
+++ b/emails/verify-email/html.pug
@@ -1,6 +1,6 @@
 h1= t('verify-title')
 p= t('verify-paragraph')
-a(href=link) #{t('verify-email-button')} 
+a(href=link)= t('verify-email-button')
 p= t('verify-thanks')
-p= t('The Template Team')
+p= t('verify-team')
 p= t('verify-footer-text')
